scripts/nullaway/nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8.txt
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:21: error: [NullAway] @NonNull field aciertos_entradas not initialized
    int[] aciertos_entradas;
          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:23: error: [NullAway] @NonNull field fallos_entradas not initialized
    int[] fallos_entradas;
          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:26: error: [NullAway] @NonNull field aciertos_muestras not initialized
    int[] aciertos_muestras;
          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:28: error: [NullAway] @NonNull field fallos_muestras not initialized
    int[] fallos_muestras;
          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/InfoElemento.java:13: error: [NullAway] @NonNull field elemento not initialized
    private Elemento elemento;
                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/InfoElemento.java:15: error: [NullAway] @NonNull field total not initialized
    private Long total;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/InfoElemento.java:17: error: [NullAway] @NonNull field apariciones not initialized
    private Long apariciones;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Regla.java:39: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return antecedente;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Regla.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return consecuente;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/GrupoElementos.java:21: error: [NullAway] @NonNull field _subgrupos not initialized
    private ArrayList<GrupoElementos> _subgrupos;
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Nodo.java:30: error: [NullAway] initializer method does not guarantee @NonNull fields elemento (line 16), padre (line 25), siguiente (line 28) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Nodo() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Nodo.java:33: error: [NullAway] initializer method does not guarantee @NonNull field siguiente (line 28) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Nodo(Elemento elemento, Nodo padre) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/RegistroTD.java:14: error: [NullAway] @NonNull field elemento not initialized
    private Elemento elemento;
                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/RegistroTD.java:17: error: [NullAway] @NonNull field soporte not initialized
    private Long soporte;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/RegistroTD.java:20: error: [NullAway] @NonNull field nodo not initialized
    private Nodo nodo;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Ventana.java:14: error: [NullAway] @NonNull field entradas not initialized
    int[] entradas;
          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Delayer.java:17: error: [NullAway] @NonNull field llamable not initialized
    private Llamable llamable;
                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:77: error: [NullAway] initializer method does not guarantee @NonNull fields ventana (line 54), historia_interna (line 57), reglas_aprendidas (line 60), cuentas (line 66), itemsets (line 74) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Hipo() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:80: error: [NullAway] initializer method does not guarantee @NonNull fields reglas_aprendidas (line 60), itemsets (line 74) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Hipo(int n_entradas, int t_ventana) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:199: error: [NullAway] dereferenced expression itemset is @Nullable
                            itemset.add(conjunto);
                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:205: error: [NullAway] dereferenced expression itemset is @Nullable
                            itemset.add(conjunto);
                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:243: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return itemset;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:1428: error: [NullAway] dereferenced expression r_nueva is @Nullable
                GrupoElementos gn = r_nueva.getConsecuente();
                                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:1470: error: [NullAway] passing @Nullable parameter 'nuevo' where @NonNull is required
            c.setAntecedente(nuevo);
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Teoria.java:41: error: [NullAway] initializer method does not guarantee @NonNull field estados (line 26) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Teoria() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Historia.java:22: error: [NullAway] initializer method does not guarantee @NonNull fields IDs (line 17), historia (line 20) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Historia(int numero_de_entradas, String[] identificadores, int[][] historia) {
           ^
    (see http://t.uber.com/nullaway )
Note: ../nullgtn/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
26 errors
